RESOLVED FIXED53800
Fix a shared memory leak
https://bugs.webkit.org/show_bug.cgi?id=53800
Summary Fix a shared memory leak
Anders Carlsson
Reported 2011-02-04 12:38:55 PST
Fix a shared memory leak
Attachments
Patch (1.22 KB, patch)
2011-02-04 12:40 PST, Anders Carlsson
mjs: review+
Anders Carlsson
Comment 1 2011-02-04 12:40:08 PST
Anders Carlsson
Comment 2 2011-02-04 12:45:23 PST
Note You need to log in before you can comment on or make changes to this bug.