2011-02-04  Anders Carlsson  <andersca@apple.com>

Reviewed by Maciej Stachowiak.

        Fix a shared memory leak
        https://bugs.webkit.org/show_bug.cgi?id=53800

        Move the send right representing the shared memory.

        * Platform/mac/SharedMemoryMac.cpp:
        (WebKit::SharedMemory::Handle::encode):


Canonical link: https://commits.webkit.org/67729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77658 268f45cc-cd09-0410-ab3c-d52691b4dbfc